--- a/Front end/package.json
+++ b/Front end/package.json
@@ -16,6 +16,7 @@
     "pdfjs-dist": "^5.4.149",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-email-editor": "^1.7.11",
     "react-icons": "^5.5.0",
     "react-papaparse": "^4.4.0",
     "react-router-dom": "^7.6.3",
