--- a/Server/package.json
+++ b/Server/package.json
@@ -13,10 +13,11 @@
   "type": "commonjs",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "mongoose": "^8.17.2",
     "multer": "^2.0.2",
-    "nodemailer": "^7.0.5",
+    "nodemailer": "^7.0.10",
     "nodemon": "^3.1.10"
   }
 }
